<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_one"
        android:title="@string/one"
        android:icon="@drawable/dragon"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_two"
        android:title="@string/two"
        android:icon="@drawable/horse"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item android:id="@+id/action_three"
        android:title="@string/three"
        android:icon="@drawable/tiger"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="4"
        app:showAsAction="never"/>
</menu>